add socials to brands/stores
