# docs/swagger.json
@@ -424,7 +424,7 @@
         "/industries": {
             "get": {
                 "tags": [
-                    "industry"
+                    "market"
                 ],
                 "responses": {
                     "200": {
@@ -763,6 +763,33 @@
                         "description": "OK",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.AppError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.AppError"
+                        }
+                    }
+                }
+            }
+        },
+        "/socials": {
+            "get": {
+                "tags": [
+                    "market"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/socialhandler.SocialsResponse"
                         }
                     },
                     "400": {
@@ -1202,11 +1229,20 @@
                 "createdAt": {
                     "type": "string"
                 },
+                "documents": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "email": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
+                },
+                "isPublished": {
+                    "type": "boolean"
                 },
                 "logo": {
                     "type": "string"
@@ -1225,6 +1261,12 @@
                 },
                 "phoneNumber": {
                     "type": "string"
+                },
+                "socials": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/social.EntitySocial"
+                    }
                 },
                 "states": {
                     "type": "array",
@@ -1269,6 +1311,7 @@
                 "businessName",
                 "countryId",
                 "email",
+                "isVerified",
                 "phoneNumber",
                 "regionId",
                 "stateId"
@@ -1289,7 +1332,6 @@
                     "type": "string"
                 },
                 "isVerified": {
-                    "description": "TODO: если установить validate:\"required\" и отправить false, то не пройдет валидацию",
                     "type": "boolean"
                 },
                 "phoneNumber": {
@@ -1308,7 +1350,9 @@
             "required": [
                 "banner",
                 "country",
+                "documents",
                 "email",
+                "isPublished",
                 "logo",
                 "marketSection",
                 "marketSubSectionIds",
@@ -1323,8 +1367,17 @@
                 "country": {
                     "type": "integer"
                 },
+                "documents": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "email": {
                     "type": "string"
+                },
+                "isPublished": {
+                    "type": "boolean"
                 },
                 "logo": {
                     "type": "string"
@@ -1343,6 +1396,12 @@
                 },
                 "phoneNumber": {
                     "type": "string"
+                },
+                "socials": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.Social"
+                    }
                 },
                 "stateIds": {
                     "type": "array",
@@ -1490,6 +1549,21 @@
                 }
             }
         },
+        "handler.Social": {
+            "type": "object",
+            "required": [
+                "id",
+                "url"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.StatesResponse": {
             "type": "object",
             "properties": {
@@ -1534,6 +1608,48 @@
                 }
             }
         },
+        "social.EntitySocial": {
+            "type": "object",
+            "properties": {
+                "icon": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "social.Social": {
+            "type": "object",
+            "properties": {
+                "icon": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "socialhandler.SocialsResponse": {
+            "type": "object",
+            "properties": {
+                "socials": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/social.Social"
+                    }
+                }
+            }
+        },
         "state.State": {
             "type": "object",
             "properties": {
@@ -1556,6 +1672,9 @@
                 },
                 "country": {
                     "$ref": "#/definitions/country.Country"
+                },
+                "createdAt": {
+                    "type": "string"
                 },
                 "deliveryDistance": {
                     "type": "integer"
@@ -1599,6 +1718,12 @@
                 "region": {
                     "$ref": "#/definitions/region.Region"
                 },
+                "socials": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/social.EntitySocial"
+                    }
+                },
                 "state": {
                     "$ref": "#/definitions/state.State"
                 },
@@ -1606,6 +1731,9 @@
                     "$ref": "#/definitions/store.StoreType"
                 },
                 "street": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -1638,21 +1766,31 @@
                 }
             }
         },
+        "storehandler.Social": {
+            "type": "object",
+            "required": [
+                "id",
+                "url"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "storehandler.StoreRequest": {
             "type": "object",
             "required": [
-                "banner",
                 "brandId",
                 "countryId",
-                "deliveryDistance",
-                "deliveryPrice",
-                "description",
                 "email",
                 "house",
-                "minimalOrderPrice",
+                "isPublished",
                 "name",
                 "phoneNumber",
-                "pictures",
                 "postCode",
                 "regionId",
                 "stateId",
@@ -1684,6 +1822,9 @@
                 "house": {
                     "type": "string"
                 },
+                "isPublished": {
+                    "type": "boolean"
+                },
                 "minimalOrderPrice": {
                     "type": "integer"
                 },
@@ -1704,6 +1845,12 @@
                 },
                 "regionId": {
                     "type": "integer"
+                },
+                "socials": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/storehandler.Social"
+                    }
                 },
                 "stateId": {
                     "type": "integer"
