# internal/market/industry/db/model.go
@@ -1,0 +1,7 @@
+package db
+
+import "errors"
+
+var (
+	ErrIndustryNotFound = errors.New("industry not found")
+)
