# internal/market/social/handler/model.go
@@ -1,0 +1,7 @@
+package socialhandler
+
+import "github.com/xw1nchester/kushfinds-backend/internal/market/social"
+
+type SocialsResponse struct {
+	Socials []social.Social `json:"socials"`
+}
